# quadrotor-arduino-jetson

./: README.md
Arduino/: motorcontrolserial.ino
Arduino/boost_test/: boost_test.ino
Arduino/motor_test_boost/: motor_test_boost.ino
c_gen/proto/: pwm.pb.cc  pwm.pb.h
juliaout/: filtered_state_msg_pb.jl  messaging.jl  pwm.jl  pwm_pb.jl
proto/: filtered_state_msg.proto  pwm.proto
scripts/: altro_example.jl  altrompcquad.ipynb  juliapublisher.jl  lqr_hover_controller.jl  lqrsub_quad.jl  lqrsubscriber.jl  motorsend.py  osqp_quad.ipynb  pwm_pb2.py  pythonsubscriber.py  quad_mpc_osqp.jl  random_linear_problem.jl
scripts/.ipynb_checkpoints/: altrompcquad-checkpoint.ipynb  quadmpcriss-checkpoint.ipynb
src/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  receive  send  serial  serial.cpp  suboroginal.cpp  subscriber  subscriber.cpp
